fix: in some case, dropdown menu could be truncated

--- a/src/minusic.css
+++ b/src/minusic.css
@@ -41,40 +41,43 @@
   cursor: pointer;
   color: #fff;
 }
+
 .minusic-menu-value::before {
   content: "x";
 }
 
 .minusic-menu-content {
   position: absolute;
-  bottom: 100%;
   right: 0;
   padding: 5px 0;
   background-color: #fff;
   color: #222;
-  margin-bottom: 10px;
+  margin-top: 10px;
   border-radius: 0.375rem;
   display: none;
-
   cursor: default;
-
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
+  z-index: 10;
 }
+
 .minusic-menu-title {
   padding: 8px 10px;
   white-space: nowrap;
   text-transform: uppercase;
   color: #777;
 }
+
 .minusic-menu:focus .minusic-menu-content,
 .minusic-menu-value:focus > .minusic-menu-content {
   display: flex;
 }
+
 .minusic-menu:focus-within .minusic-menu-content {
   display: flex;
 }
+
 .minusic-menu-item {
   padding: 12px 42px;
   background-color: transparent;
